# manus

./: .gitignore  README.md  build_templates.py  install.bat  main.py  pyproject.toml  requirements-vds.txt
models/: README.txt
scripts/: build_click_dataset.bat  export_click_dataset.py  export_click_onnx.bat  export_click_onnx.py  infer_click_model.bat  infer_click_model.py  install.bat  start.bat  train_click_model.bat  train_click_model.py  train_click_model_200.bat
src/orange_bot/: __init__.py  bootstrap.py  bot.py  brain.py  cli.py  click_model.py  config.py  custom_detector.py  detectors.py  evaluator.py  state.py  templates.py  vision.py  win32_input.py
